[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pylikwid"
version = "0.4.2"
authors = [
  { name = "Thomas Roehl", email = "thomas.roehl@googlemail.com" }
]
description = "A Python module to access the function of the LIKWID library"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["hpc", "performance", "benchmark", "analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3",
]


[project.urls]
official = "https://github.com/RRZE-HPC/pylikwid"
fork = "https://github.com/FattiMei/pylikwid"
